--- a/dev/sass/_wp-style.scss
+++ b/dev/sass/_wp-style.scss
@@ -51,8 +51,8 @@ blockquote {
     line-height: 1.5;
     margin-bottom: 50px;
     flex-direction: column;
-    background: #EDF1F4;
-    border-radius: 12px;
+    background: #F5F2EA;
+    border-radius: 6px;
     padding: 40px 50px 55px;
     margin: 36px auto 48px;
     &:before {
