--- a/dev/sass/_modal.scss
+++ b/dev/sass/_modal.scss
@@ -94,8 +94,6 @@ textarea,
 select {
 	background-color: #fff;
 	background-clip: padding-box;
-	border: 1px solid #e1e1e1;
-	border-radius: 30px;
 	padding: 11px 12px 11px 20px;
 	transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 	font-size: 16px;
@@ -103,6 +101,8 @@ select {
 	width: 100%;
 	color: #0b305d;
 	height: 54px;
+	border: 1px solid #CBD0DA;
+	border-radius: 6px;
 	&:focus {
 		// background-color: #f9f9f9;
 		border: 1px solid $secondary-color;
