--- a/dev/sass/media/_media_max_width1024.scss
+++ b/dev/sass/media/_media_max_width1024.scss
@@ -7,7 +7,7 @@
     section {
         .title-icon {
             margin-bottom: 36px;
-            font-size: 24px;
+            font-size: 28px;
         }
     }
 
@@ -18,10 +18,10 @@
 
 
     .header__menu-wrap {
-        > nav {
-            > ul {
-                > li {
-                    > a {
+        >nav {
+            >ul {
+                >li {
+                    >a {
                         color: $secondary-color;
                     }
                 }
@@ -103,7 +103,7 @@
                 .item-project__wrap-joined {
                     width: 100%;
                     border: none;
-                    border-top: 2px solid #edf1f4;
+                    border-top: 3px solid #e5e5e5;
                     display: flex;
                     justify-content: space-between;
                     padding: 20px;
@@ -139,6 +139,12 @@
         }
     }
 
+
+    .partner {
+        padding: 42px 0 54px;
+        background: url(assets/img/custom-decorate.svg) calc(100% - 60px) center no-repeat repeat $primary-color;
+    }
+
     .reviews-list {
         margin: 84px auto;
 
@@ -152,10 +158,9 @@
     }
 
     .item-partner-coment__img {
-        width: 94px;
-        height: 94px;
-        border: 9px solid #fff;
-        margin: -107px auto 5px;
+        width: 60px;
+        height: 60px;
+        border: none;
     }
 
     .article {
@@ -249,7 +254,7 @@
                     background-position: center;
                     background-repeat: no-repeat;
                     transform: translate(-50%, -50%);
-                    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='9' viewBox='0 0 14 9' fill='none'%3E%3Cpath d='M13.7098 1.2101C13.6169 1.11638 13.5063 1.04198 13.3844 0.991213C13.2625 0.940445 13.1318 0.914307 12.9998 0.914307C12.8678 0.914307 12.7371 0.940445 12.6152 0.991213C12.4934 1.04198 12.3828 1.11638 12.2898 1.2101L7.70982 5.7901C7.61685 5.88382 7.50625 5.95822 7.38439 6.00899C7.26253 6.05975 7.13183 6.08589 6.99982 6.08589C6.86781 6.08589 6.7371 6.05975 6.61524 6.00899C6.49338 5.95822 6.38278 5.88382 6.28982 5.7901L1.70982 1.2101C1.61685 1.11638 1.50625 1.04198 1.38439 0.991213C1.26253 0.940445 1.13183 0.914307 0.999816 0.914307C0.867804 0.914307 0.737098 0.940445 0.615239 0.991213C0.49338 1.04198 0.382779 1.11638 0.289816 1.2101C0.103565 1.39747 -0.000976562 1.65092 -0.000976562 1.9151C-0.000976562 2.17929 0.103565 2.43274 0.289816 2.6201L4.87982 7.21009C5.44232 7.77189 6.20481 8.08745 6.99982 8.08745C7.79482 8.08745 8.55732 7.77189 9.11982 7.21009L13.7098 2.6201C13.8961 2.43274 14.0006 2.17929 14.0006 1.9151C14.0006 1.65092 13.8961 1.39747 13.7098 1.2101Z' fill='%23626874'/%3E%3C/svg%3E");
+                    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='9' viewBox='0 0 14 9' fill='none'%3E%3Cpath d='M13.7098 1.2101C13.6169 1.11638 13.5063 1.04198 13.3844 0.991213C13.2625 0.940445 13.1318 0.914307 12.9998 0.914307C12.8678 0.914307 12.7371 0.940445 12.6152 0.991213C12.4934 1.04198 12.3828 1.11638 12.2898 1.2101L7.70982 5.7901C7.61685 5.88382 7.50625 5.95822 7.38439 6.00899C7.26253 6.05975 7.13183 6.08589 6.99982 6.08589C6.86781 6.08589 6.7371 6.05975 6.61524 6.00899C6.49338 5.95822 6.38278 5.88382 6.28982 5.7901L1.70982 1.2101C1.61685 1.11638 1.50625 1.04198 1.38439 0.991213C1.26253 0.940445 1.13183 0.914307 0.999816 0.914307C0.867804 0.914307 0.737098 0.940445 0.615239 0.991213C0.49338 1.04198 0.382779 1.11638 0.289816 1.2101C0.103565 1.39747 -0.000976562 1.65092 -0.000976562 1.9151C-0.000976562 2.17929 0.103565 2.43274 0.289816 2.6201L4.87982 7.21009C5.44232 7.77189 6.20481 8.08745 6.99982 8.08745C7.79482 8.08745 8.55732 7.77189 9.11982 7.21009L13.7098 2.6201C13.8961 2.43274 14.0006 2.17929 14.0006 1.9151C14.0006 1.65092 13.8961 1.39747 13.7098 1.2101Z' fill='%233943BC'/%3E%3C/svg%3E");
                     transition: .3s;
                 }
 
@@ -428,6 +433,10 @@
         }
     }
 
+    .form {
+        background: url(assets/img/custom-decorate.svg) calc(100% - 60px) center no-repeat repeat $primary-color;
+    }
+
     .contact-row {
         margin: 36px auto 60px;
 
@@ -439,4 +448,41 @@
     .contact-item {
         margin-bottom: 28px;
     }
+
+    .slider-partner.slider-def{
+        .slick-dots {
+            position: static;
+            margin-bottom: 33px;
+        }
+    } 
+
+    .slider-partner.slider-def .slick-list {
+        margin-bottom: 40px;
+    }
+
+    .block-black {
+        h2 {
+           font-weight: 500;
+           font-size: 36px;
+           margin-bottom: 18px;
+       }
+       
+       p {
+        font-size: 16px;
+       }
+    }
+
+    .form .title-descr {
+        font-size: 16px;
+    }
+
+
+    .projects-filters {
+        background: url(assets/img/custom-decorate.svg) calc(100% - 60px) center no-repeat repeat #3943BC;
+    }
+
+    .seo-text {
+        margin: 55px 0;
+    }
+
 }
