--- a/dev/sass/media/_media_max_width1199.scss
+++ b/dev/sass/media/_media_max_width1199.scss
@@ -25,10 +25,10 @@
         margin-left: 20px;
     }
 
-    .item-project__wrap-sum>div b,
-    .item-project__wrap-sum>div span:last-child {
-        font-size: 16px;
-    }
+    // .item-project__wrap-sum>div b,
+    // .item-project__wrap-sum>div span:last-child {
+    //     font-size: 16px;
+    // }
 
     .item-project__info-wrap {
         padding: 25px;
@@ -50,10 +50,6 @@
         max-width: 250px;
     }
 
-    .item-partner-coment {
-        padding: 60px 25px 30px;
-    }
-
     .item-partner-coment__coment {
         font-size: 16px;
     }
@@ -62,9 +58,7 @@
         height: 235px;
     }
 
-    .block-black__text {
-        margin-right: 30px;
-    }
+ 
 
     .home-top {
 
@@ -155,7 +149,7 @@
         font-size: 16px;
         line-height: 24px;
         margin-top: 15px;
-        margin-bottom: 30px;
+        margin-bottom: 36px;
     }
 
     h1.title-icon {
@@ -207,11 +201,7 @@
     }
 
     .block-black {
-        padding: 60px 0px;
-    }
-
-    .block-black__text {
-        max-width: 455px;
+        padding: 120px 0px;
     }
 
     .phone-dropdown__menu .email {
@@ -333,7 +323,8 @@
     .slider-partner.slider-def .item-partner-coment {
         opacity: 1;
         transform: scale(1);
-        margin: 60px 10px 0;
+      
+        padding: 20px;
     }
 
     .partner {
@@ -347,8 +338,8 @@
     }
 
     .slider-partner.slider-def {
-        padding: 85px 0px 85px;
-        margin-top: -85px;
+        padding: 0;
+        margin-top: 0;
     }
 
     .slick-dotted.slick-slider {
@@ -359,32 +350,7 @@
         left: -26px;
     }
 
-    .block-black {
-        position: relative;
-
-        .block-black__text {
-            position: relative;
-            z-index: 1;
-        }
-
-        &::after {
-            content: "";
-            position: absolute;
-            left: 0;
-            right: 0;
-            top: 0;
-            bottom: 0;
-            background: linear-gradient(0deg,
-                    rgba(26, 29, 34, 0.75),
-                    rgba(26, 29, 34, 0.75));
-
-            border-radius: 24px;
-        }
-
-        p {
-            color: #fff;
-        }
-    }
+ 
 
     .footer__info a {
         font-size: 16px;
@@ -675,7 +641,7 @@
     }
 
     .news-home .btn {
-        margin: 40px auto 0px;
+        margin: 0 auto;
     }
 }
 
@@ -700,7 +666,7 @@
     }
 
     .slider-def.slider-def-three-el {
-        padding-bottom: 50px;
+        padding-bottom: 30px;
     }
 
     .header {
@@ -876,8 +842,8 @@
         border-radius: 0;
         margin-left: -20px;
         margin-right: -20px;
-        padding: 50px 20px;
-        background-position: -115px 0;
+        padding: 55px 20px 62px;
+ 
     }
 
     .block-black::after {
@@ -895,23 +861,33 @@
     }
 
     .form {
-        margin-bottom: 81px;
+        .wrapper {
+            padding: 43px 15px 71px;
+        }
 
         &-tab {
-            padding: 25px 18px 36px;
+            padding: 0 15px 36px;
         }
 
         &-tab__tabs {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 -15px;
 
             .btn-tab {
                 height: auto;
                 text-align: center;
-                padding: 9px;
+                padding: 9px 30px;
                 font-size: 16px;
             }
         }
     }
 
+    .news-home {
+        padding: 56px 0px;
+    }
+    
     .input-wrap .note {
         width: 242px;
         font-size: 14px;
@@ -927,21 +903,39 @@
         margin-bottom: 40px;
     }
 
-    .subscribe__content {
-        padding-bottom: 20px;
+    .subscribe {
+        background: url(assets/img/custom-decorate.svg) calc(100% - 60px) center no-repeat repeat $primary-color;
+
+        &__content {
+            padding: 28px 0 48px;
+        }
+        
+        .title-icon {
+            margin-bottom: 36px;
+            font-size: 20px;
+        }
     }
 
-    .form-subscribe form .btn {
-        font-size: 0;
-        width: 48px;
-        height: 48px;
-        padding: 0;
-        background-size: auto;
-        background-position: center;
-        background-repeat: no-repeat;
-        border-radius: 50%;
-        background-image: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 18 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.25 0.75H3.75C2.7558 0.751191 1.80267 1.14666 1.09966 1.84966C0.396661 2.55267 0.00119089 3.5058 0 4.5L0 13.5C0.00119089 14.4942 0.396661 15.4473 1.09966 16.1503C1.80267 16.8533 2.7558 17.2488 3.75 17.25H14.25C15.2442 17.2488 16.1973 16.8533 16.9003 16.1503C17.6033 15.4473 17.9988 14.4942 18 13.5V4.5C17.9988 3.5058 17.6033 2.55267 16.9003 1.84966C16.1973 1.14666 15.2442 0.751191 14.25 0.75ZM3.75 2.25H14.25C14.6991 2.25088 15.1376 2.38614 15.5092 2.63835C15.8808 2.89057 16.1684 3.24821 16.335 3.66525L10.5915 9.4095C10.1688 9.83049 9.59656 10.0669 9 10.0669C8.40344 10.0669 7.83118 9.83049 7.4085 9.4095L1.665 3.66525C1.83161 3.24821 2.11921 2.89057 2.49079 2.63835C2.86236 2.38614 3.30091 2.25088 3.75 2.25ZM14.25 15.75H3.75C3.15326 15.75 2.58097 15.5129 2.15901 15.091C1.73705 14.669 1.5 14.0967 1.5 13.5V5.625L6.348 10.47C7.05197 11.1722 8.00569 11.5665 9 11.5665C9.99431 11.5665 10.948 11.1722 11.652 10.47L16.5 5.625V13.5C16.5 14.0967 16.2629 14.669 15.841 15.091C15.419 15.5129 14.8467 15.75 14.25 15.75Z' fill='%233943bc'/%3E%3C/svg%3E%0A");
-    }
+    .form-subscribe {
+        form {
+            
+            input[type="email"] {
+                padding-right: 70px;
+            }
+
+            .btn {
+                font-size: 0;
+                width: 48px;
+                height: 48px;
+                padding: 0;
+                background-size: auto;
+                background-position: center;
+                background-repeat: no-repeat;
+                border-radius: 4px;
+                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 18 18' fill='none'%3E%3Cpath d='M14.25 0.75H3.75C2.7558 0.751191 1.80267 1.14666 1.09966 1.84966C0.396661 2.55267 0.00119089 3.5058 0 4.5L0 13.5C0.00119089 14.4942 0.396661 15.4473 1.09966 16.1503C1.80267 16.8533 2.7558 17.2488 3.75 17.25H14.25C15.2442 17.2488 16.1973 16.8533 16.9003 16.1503C17.6033 15.4473 17.9988 14.4942 18 13.5V4.5C17.9988 3.5058 17.6033 2.55267 16.9003 1.84966C16.1973 1.14666 15.2442 0.751191 14.25 0.75V0.75ZM3.75 2.25H14.25C14.6991 2.25088 15.1376 2.38614 15.5092 2.63835C15.8808 2.89057 16.1684 3.24821 16.335 3.66525L10.5915 9.4095C10.1688 9.83049 9.59656 10.0669 9 10.0669C8.40344 10.0669 7.83118 9.83049 7.4085 9.4095L1.665 3.66525C1.83161 3.24821 2.11921 2.89057 2.49079 2.63835C2.86236 2.38614 3.30091 2.25088 3.75 2.25V2.25ZM14.25 15.75H3.75C3.15326 15.75 2.58097 15.5129 2.15901 15.091C1.73705 14.669 1.5 14.0967 1.5 13.5V5.625L6.348 10.47C7.05197 11.1722 8.00569 11.5665 9 11.5665C9.99431 11.5665 10.948 11.1722 11.652 10.47L16.5 5.625V13.5C16.5 14.0967 16.2629 14.669 15.841 15.091C15.419 15.5129 14.8467 15.75 14.25 15.75Z' fill='%23171D32'/%3E%3C/svg%3E");
+            }
+        } 
+    } 
 
     .seo-text {
         p {
@@ -1014,10 +1008,6 @@
     .phone-dropdown__menu .email {
         margin-top: 15px;
         margin-bottom: 20px;
-    }
-
-    .select .list {
-        padding: 10px 20px;
     }
 }
 
