--- a/dev/sass/other/black-block.scss
+++ b/dev/sass/other/black-block.scss
@@ -1,20 +1,32 @@
 .block-black {
-    padding: 100px 0px;
+    padding: 267px 12px 180px;
     background-size: cover;
-    border-radius: 24px;
-
+    background-position: center;
+    
     h2 {
-        color: #ffffff;
-        margin-bottom: 10px;
+        font-weight: 500;
+        font-size: 44px;
+        line-height: 1.23;
+        text-align: center;
+        color: #FFFFFF;
+        margin-bottom: 29px;
+        font-family: $font-secondary;
     }
 
     &__text {
-        max-width: 520px;
-        margin-left: auto;
-        margin-right: 140px;
+        text-align: center;
+        max-width: 856px;
+        margin: 0 auto;  
+    }
+
+    p {
+        font-size: 20px;
+        color: #CBD0DA;
+        line-height: 1.5;
+        padding: 0 15px;
     }
 
     .btn {
-        margin-top: 40px;
+        margin: 46px auto 0;
     }
 }
