--- a/dev/sass/page/markup.scss
+++ b/dev/sass/page/markup.scss
@@ -246,6 +246,7 @@ h6,
     line-height: 1.2;
     color: #171D32;
     font-weight: 500;
+    font-family: $font-secondary;
 }
 
 h1,
@@ -474,7 +475,7 @@ input:checked+label {
 }
 
 .scroll-x::-webkit-scrollbar-thumb {
-    background-color: $primary-color;
+    background-color: $secondary-color;
     border-radius: 5px;
 }
 
@@ -487,17 +488,17 @@ input:checked+label {
 
 .scroll::-webkit-scrollbar {
     width: 6px;
-    border-radius: 5px;
+    border-radius: 6px;
 }
 
 .scroll::-webkit-scrollbar-thumb {
-    background-color: $primary-color;
+    background-color: $secondary-color;
     background-clip: padding-box;
     border: 0px solid #f9f9f9;
-    border-radius: 5px;
+    border-radius: 6px;
 
     &:hover {
-        background-color: $primary-color-hover;
+        background-color: $secondary-color-hover;
     }
 }
 
@@ -513,7 +514,7 @@ input:checked+label {
 
 /* IE */
 .scroll {
-    scrollbar-face-color: $primary-color;
+    scrollbar-face-color: $secondary-color;
     scrollbar-shadow-color: #f9f9f9;
     scrollbar-highlight-color: #f9f9f9;
 }
@@ -541,13 +542,19 @@ input:checked+label {
     font-size: 14px;
     color: $breadcrumbs-last-child;
     margin: 27px 0 54px;
+    
+    span {
+        &:hover {
+            cursor: default;
+        }
+    }
 
     a {
         text-decoration: none;
         color: $breadcrumbs-link;
-
+        font-weight: 400;
         &:hover {
-            color: $breadcrumbs-link-hover;
+            text-decoration: underline;
         }
     }
 }
