--- a/dev/sass/media/_media_max_width1199.scss
+++ b/dev/sass/media/_media_max_width1199.scss
@@ -372,6 +372,13 @@
     .footer__title {
         margin-bottom: 20px;
     }
+
+    .form-questions {
+        .form-tab {
+            padding: 20px;
+        }
+    }
+    
 }
 
 @media screen and (max-width: 991px) {
