--- a/dev/sass/other/accordion-template.scss
+++ b/dev/sass/other/accordion-template.scss
@@ -3,7 +3,8 @@
 }
 
 .accordion-title {
-    font-weight: 600;
+    font-family: $font-secondary;
+    font-weight: 500;
     font-size: 24px;
     color: #5864F9;
     text-align: center;
