--- a/dev/sass/other/slider-partners.scss
+++ b/dev/sass/other/slider-partners.scss
@@ -87,7 +87,8 @@
     }
 
     &__name {
-        color: #0b305d;
+        font-family: $font-secondary;
+        color: #171D32;
         font-size: 24px;
         font-weight: 600;
         margin-bottom: 10px;
