--- a/dev/sass/page/about-page.scss
+++ b/dev/sass/page/about-page.scss
@@ -14,6 +14,7 @@
 
     .first-screen {
         margin-top: -105px;
+
         +.wrapper {
             .post-item {
                 padding-top: 84px;
@@ -25,8 +26,8 @@
 
 .first-screen {
     min-height: 912px;
-    background: url(assets/img/about-page-first-screen-bg.png) center/cover no-repeat #041629;
-    background-position: center -5vw;
+    background: url(assets/img/about-page-first-screen-bg.png) center/cover no-repeat #1e2123;
+    background-position: center;
     padding-bottom: var(--overlap-padding);
     margin-bottom: var(--overlap-margin);
     // position: relative;
@@ -43,7 +44,7 @@
     // }
 
     h1 {
-        font-weight: 600;
+        font-weight: 400;
         font-size: 42px;
         line-height: 1.28;
         display: flex;
@@ -55,7 +56,7 @@
     }
 
     p {
-        color: #B1AFBE;
+        color: #F5F2EA;
         font-size: 18px;
         text-align: center;
         padding: 0 12px;
@@ -65,6 +66,7 @@
 }
 
 .first-screen__logo {
+    padding-top: 62px;
     margin-bottom: 52px;
     display: flex;
     justify-content: center;
@@ -73,7 +75,7 @@
 
 .our-values {
     margin: 48px auto 60px;
-}    
+}
 
 .value-item {
     text-align: center;
@@ -96,21 +98,29 @@
 .about-page {
     .about {
         min-height: 1076px;
-     
-            padding: 443px 0px 338px;
-            margin: -300px auto -190px;
+       
+        padding: 443px 0px 338px;
+        margin: -300px auto -190px;
+        background: url(assets/img/review-decorate-right.png) right bottom no-repeat,
+                    url(assets/img/review-decorate-left.png) left bottom no-repeat, 
+                    url(assets/img/custom-decorate.svg) calc(100% - 60px) center no-repeat repeat,
+                    url(assets/img/custom-decorate.svg) 60px center no-repeat repeat $primary-color!important;
+        
+
         h2 {
             text-align: center;
             color: #fff;
         }
 
-        .row-custom-info{
+        .row-custom-info {
             border: none;
         }
+
         .about__info {
             text-align: center;
         }
     }
+
     .post-item {
         position: relative;
         z-index: 1;
