--- a/dev/templates/news-slider.html
+++ b/dev/templates/news-slider.html
@@ -7,7 +7,7 @@
         <div class="slider-project slider-def slider-def-three-el">
             <div class="item-project item-project--news">
                 <a href="project-item.html" class="item-project__img">
-                    <img src="./assets/img/proj-item-1.png" alt="" />
+                    <img src="./assets/img/proj-item-10.png" alt="" />
                 </a>
                 <div class="item-project__info-wrap">
                     <div class="item-project__views">
@@ -15,7 +15,7 @@
                         <span><i class="icon-svg icon-eye"></i> 312 </span>
                     </div>
                     <div class="item-project__title">
-                        <a href="project-item.html">Збір коштів на прихисток для біжинців на Вінничині</a>
+                        <a href="project-item.html">Мешканці тимчасово окупованих міст Київщини повертаються додому</a>
                     </div>
                     <p class="item-project__descr">
                         Майже місяць триває війна і мужній спротив українського народу. Це
@@ -25,7 +25,7 @@
             </div>
             <div class="item-project item-project--news">
                 <a href="project-item.html" class="item-project__img">
-                    <img src="./assets/img/proj-item-2.png" alt="" />
+                    <img src="./assets/img/proj-item-11.png" alt="" />
                 </a>
                 <div class="item-project__info-wrap">
                     <div class="item-project__views">
@@ -33,7 +33,7 @@
                         <span><i class="icon-svg icon-eye"></i> 312 </span>
                     </div>
                     <div class="item-project__title">
-                        <a href="project-item.html">Збір коштів на прихисток для біжинців на Вінничині</a>
+                        <a href="project-item.html">Посівна в Україні триває — вистоїмо самі та врятуємо світ від голоду</a>
                     </div>
                     <p class="item-project__descr">
                         Майже місяць триває війна і мужній спротив українського народу. Це
@@ -43,7 +43,7 @@
             </div>
             <div class="item-project item-project--news">
                 <a href="project-item.html" class="item-project__img">
-                    <img src="./assets/img/proj-item-3.png" alt="" />
+                    <img src="./assets/img/proj-item-12.png" alt="" />
                 </a>
                 <div class="item-project__info-wrap">
                     <div class="item-project__views">
@@ -51,7 +51,7 @@
                         <span><i class="icon-svg icon-eye"></i> 312 </span>
                     </div>
                     <div class="item-project__title">
-                        <a href="project-item.html">Збір коштів на прихисток для біжинців на Вінничині</a>
+                        <a href="project-item.html">Долаємо наслідки війни разом з волонтерами Вінницького центру</a>
                     </div>
                     <p class="item-project__descr">
                         Майже місяць триває війна і мужній спротив українського народу. Це
