--- a/dev/templates/projects-grid.html
+++ b/dev/templates/projects-grid.html
@@ -4,13 +4,13 @@
             <div class="col-md-6 col-lg-4">
                 <div class="item-project">
                     <a href="project-item.html" class="item-project__img">
-                        <img src="./assets/img/proj-item-1.png" alt="">
+                        <img src="./assets/img/proj-item-4.png" alt="">
                     </a>
                     <div class="item-project__info-wrap">
                         <div class="item-project__title">
                             <a href="project-item.html">Збір коштів на прихисток для біжинців на Вінничині</a>
                             <div class="progress">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" height="60" width="60" data-value="1">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" height="60" width="60" data-value="85">
                                     <circle class="bg" cx="30" cy="30" r="25" fill="none" stroke="#EDF1F4" stroke-miterlimit="10" />
                                     <circle class="meter" cx="30" cy="30" r="25" fill="none" stroke="#FFD018" stroke-dashoffset="157" stroke-dasharray="157" stroke-miterlimit="10" />
                                 </svg>
@@ -100,7 +100,7 @@
             <div class="col-md-6 col-lg-4">
                 <div class="item-project">
                     <a href="project-item.html" class="item-project__img">
-                        <img src="./assets/img/proj-item-4.png" alt="">
+                        <img src="./assets/img/proj-item-13.png" alt="">
                     </a>
                     <div class="item-project__info-wrap">
                         <div class="item-project__title">
