--- a/dev/sass/_wp-style.scss
+++ b/dev/sass/_wp-style.scss
@@ -3,6 +3,7 @@ img {
     &.alignleft,
     &.alignright {
         max-width: 49%;
+        border-radius: 6px;
     }
 
     &.alignleft {
@@ -16,6 +17,7 @@ img {
     }
 
     &.aligncenter {
+        border-radius: 6px;
         display: block;
         margin-left: auto;
         margin-right: auto;
