--- a/dev/style.scss
+++ b/dev/style.scss
@@ -17,6 +17,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import "sass/fonts";
 @import "sass/modal";
 @import "sass/header";
+@import "sass/page/people-search"; 
 @import "sass/page/404";
 @import "sass/page/article";
 @import "sass/page/home"; 
