--- a/dev/sass/page/people-search.scss
+++ b/dev/sass/page/people-search.scss
@@ -1,14 +1,16 @@
 .people-filters {
     .input-wrap {
         position: initial;
-        .icon-wrap  {
+
+        .icon-wrap {
             right: 5px;
             top: 0px;
         }
     }
+
     .wrapper {
 
-        .nice-select + .icon-wrap  {
+        .nice-select+.icon-wrap {
             right: 5px;
             top: 0px;
         }
@@ -17,29 +19,124 @@
     .icon-svg {
         filter: brightness(0) invert(1);
     }
+
     .projects-filters__select-box {
         .icon-wrap {
 
-            .note{
+            .note {
                 bottom: 37px;
                 z-index: 1;
+
                 &::after {
                     bottom: -2px;
                     z-index: -1;
                 }
             }
-        } 
+        }
     }
 
-    .col-lg-4{
+    .col-lg-4 {
         &:last-child {
-            .input-wrap .note{
+            .input-wrap .note {
                 left: -330px;
                 bottom: 37px;
+
                 &::after {
                     left: calc(100% - 45px);
                 }
             }
         }
     }
+}
+
+.person {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    max-width: 430px;
+    padding: 30px;
+    margin: 0 auto;
+    border-radius: 12px;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    background: #FFF;
+    position: relative;
+    cursor: pointer;
+
+    &-img-box {
+        margin-bottom: 24px;
+        margin: -30px -30px 24px -30px;
+        position: relative;
+
+        img {
+            width: 100%;
+            height: 391px;
+            object-fit: cover;
+            border-radius: 12px 12px 0 0;
+        }
+    }
+
+    &-status {
+
+        font-size: 14px;
+        line-height: 128.571%;
+        color: $black;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        padding: 5px 10px;
+        background: $label-red;
+    }
+
+    &-name {
+        font-family: $font-secondary;
+        font-size: 28px;
+        font-weight: 500;
+        line-height: 128.571%;
+        color: $black;
+        margin-bottom: 12px;
+    }
+
+    &-date {
+        font-family: $font-secondary;
+        color: $black;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 150%;
+        margin-bottom: 12px;
+    }
+
+    &-place {
+        padding: 16px 30px;
+        border-radius: 6px;
+        background-color: #F5F2EA;
+        color: $black;
+        margin-bottom: 24px;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        &-title {
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 133.333%;
+        }
+
+        &-adress {
+            line-height: 150%;
+        }
+    }
+
+    .person-details {
+        @extend .btn-secondary,
+        .btn;
+
+    }
+
+    .person-details {
+        justify-content: center;
+        width: 100% !important;
+        margin-top: auto;
+    }
+
 }
