search-people.js

--- a/dev/sass/page/people-search.scss
+++ b/dev/sass/page/people-search.scss
@@ -1,3 +1,10 @@
+.people-search {
+    .template-grid {
+        [class*="col"] {
+            margin-bottom: 60px;
+        }
+    }
+}
 .people-filters {
     .input-wrap {
         position: initial;
