--- a/dev/templates/footer.html
+++ b/dev/templates/footer.html
@@ -79,5 +79,6 @@
 	@@include('modals.html')
 	<script	src="assets/js/library.min.js"></script>
 	<script src="assets/js/custom.js"></script>
+	<script src="assets/js/search-people.js"></script>
 </body>
 </html>
