--- a/dev/templates/people-filters.html
+++ b/dev/templates/people-filters.html
@@ -5,10 +5,10 @@
             <div class="col-lg-4">
                 <div class="projects-filters__select-box">
                     <div class="select-title">Стать:</div>
-                    <select class="select">
-                        <option value="1">Чоловiча</option>
-                        <option value="2">Жіноча</option>
-                        <option value="3">Всi</option>
+                    <select id="genderSelect" class="select">
+                        <option value="male">Чоловiча</option>
+                        <option value="female">Жіноча</option>
+                        <option value="all">Всi</option>
                     </select>
                     <div class="icon-wrap">
                         <i class="icon-svg icon-question"></i>
@@ -22,7 +22,7 @@
                 <div class="projects-filters__select-box">
                     <div class="select-title">Iм'я</div>
                     <div class="input-wrap">
-                        <input type="text" placeholder=" Введіть ім'я особи " />
+                        <input type="text" id="nameFilter" placeholder=" Введіть ім'я особи " />
                         <div class="icon-wrap">
                             <i class="icon-svg icon-question"></i>
                             <div class="note">
@@ -36,7 +36,7 @@
                 <div class="projects-filters__select-box">
                     <div class="select-title">Вік</div>
                     <div class="input-wrap">
-                        <input type="number" placeholder=" Введіть вік особи " />
+                        <input type="number" id="ageFilter" placeholder=" Введіть вік особи " />
                         <div class="icon-wrap">
                             <i class="icon-svg icon-question"></i>
                             <div class="note">
