--- a/dev/sass/page/people-search.scss
+++ b/dev/sass/page/people-search.scss
@@ -4,12 +4,92 @@
             margin-bottom: 60px;
         }
     }
+ 
 }
+.users-container {
+    min-height: 776px;
+}
+
+.range-slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px !important;
+    padding: 0 10px !important;
+    outline: none;
+    margin-top: 20px;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.range-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 50px;
+    height: 50px;
+    border: 2px solid $secondary-color;
+    border-radius: 50%;
+    background: url(/assets/img/about-page-first-screen-logo.png) center/30px $primary-color no-repeat;
+    cursor: pointer;
+}
+
+.range-slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: $secondary-color;
+    cursor: pointer;
+}
+
+.projects-filters__select-box {
+
+    .select-title {
+        display: flex;
+    }
+}
+
+#ageFilter-value {
+    margin: 0 5px;
+
+}
+
+.range-diapason {
+    position: absolute;
+    top: 43px;
+    left: 0;
+    color: #fff;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    background: red;
+    line-height: 0;
+    font-size: 14px;
+}
+
 .people-filters {
     .input-wrap {
         position: initial;
+        display: flex;
 
-        .icon-wrap {
+        .btn-box {
+            display: flex;
+            flex-direction: column;
+            width: 33.333%;
+            max-width: 100px;
+            &:first-child {
+                max-width: 32px;
+                margin-right: 17px;
+            }
+            label {
+                color: #fff;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                &:before{
+                    margin: 0;
+                }
+            }
+        }
+
+        .icon-wrap, + .icon-wrap {
             right: 5px;
             top: 0px;
         }
@@ -146,4 +226,93 @@
         margin-top: auto;
     }
 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Стили для модального окна */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.7);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px;
+    position: relative;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.close-modal {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close-modal:hover,
+.close-modal:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-body {
+    text-align: center;
+}
+
+.modal-photo {
+    max-width: 100%;
+    height: auto;
+    margin-top: 10px;
+}
+
+.modal-header {
+    margin-bottom: 20px;
+}
+
+.modal-name {
+    font-size: 24px;
+}
+
+.modal-age {
+    font-size: 18px;
+    color: #777;
+    margin-top: 5px;
+}
+
+.modal-details {
+    margin-top: 20px;
+}
+
+.modal-city {
+    margin-top: 10px;
+    font-style: italic;
 }
